# bayes-stack

./: .gitignore  .gitmodules  Benchmark.hs  LDA.hs  LDATest.hs  LICENSE  LibThingLDA.hs  LibThingSharedTaste.hs  README.mkd  RunCI.hs  SharedTaste.hs  SharedTasteOwn.hs  SharedTasteTest.hs  bayes-stack.cabal
BayesStack/: Categorical.hs  Core.hs  DirMulti.hs  Dirichlet.hs  Gibbs.hs  ModelMonad.hs  Multinomial.hs  TupleEnum.hs  Types.hs  UniqueKey.hs
BayesStack/Core/: Concurrent.hs  Gibbs.hs  GibbsUpdate.hs  ModelMonad.hs  Shared.hs  Types.hs  Utils.hs
BayesStack/Core/Gibbs/: Concurrent.hs
BayesStack/Gibbs/: Concurrent.hs  Simple.hs
BayesStack/Models/: LDA.hs  SharedTaste.hs  SharedTasteOwn.hs
BayesStack/Models/Topic/: CitationInfluence.hs  LDA.hs  SharedTaste.hs  SharedTasteOwn.hs  SharedTasteOwnSync.hs  SharedTasteSync.hs  Types.hs
BoardsIE/: AssignPostsToThreads.hs  Extract.hs  ExtractFoaf.hs  ExtractForums.hs  ExtractKeywords.hs  ExtractPosts.hs  ExtractThreads.hs  GraphViz.hs  RunSharedTasteOwn.hs  Types.hs
Data/Binary/: EnumMap.hs  EnumSet.hs  LogFloat.hs
Data/Random/: Sequence.hs
Data/Sequence/: Chunk.hs
Data/Serialize/: EnumMap.hs  LogFloat.hs
LibThing/: CorrelationConsistency.hs  CrossValLDA.hs  CrossValST.hs  CrossValSTO.hs  Data.hs  Dump.hs  DumpLDA.hs  GraphViz.hs  LibThingLDA.hs  LibThingSharedTaste.hs  LibThingSharedTasteOwn.hs  RunLDA.hs  RunSharedTaste.hs  RunSharedTasteOwn.hs
doc/: installation.markdown  usage.markdown
docs/: installation.markdown  usage.markdown
network-topic-models/: BenchLDA.hs  BenchST.hs  Benchmark.hs  DumpCI.hs  DumpCINT.hs  DumpLDA.hs  DumpLDARelevance.hs  DumpST.hs  FormatMultinom.hs  README.mkd  ReadData.hs  ReadRelevanceData.hs  RunCI.hs  RunCINT.hs  RunLDA.hs  RunLDARelevance.hs  RunST.hs  RunSampler.hs  SerializeText.hs  TopicLanguageModel.hs  network-topic-models.cabal
network-topic-models/BayesStack/Models/Topic/: CitationInfluence.hs  CitationInfluenceNoTopics.hs  LDA.hs  LDARelevance.hs  SharedTaste.hs  Test.hs  Types.hs
network-topic-models/doc/models/: model_ci.tex  model_ci_nt.tex  models.tex
topics-models/: LICENSE  ReadData.hs  RunCI.hs  RunLDA.hs  bayes-stack-topic-models.cabal
topics-models/BayesStack/Models/Topic/: Test.hs
