Name:                bayes-stack

Version:             0.2
Synopsis:            Framework for inferring generative probabilistic models with Gibbs sampling
License:             BSD3
License-file:        LICENSE
Author:              Ben Gamari
Maintainer:          bgamari.foss@gmail.com
Category:            Math

Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:     BayesStack.Core, BayesStack.Core.Types, BayesStack.Core.Gibbs,
                       BayesStack.DirMulti, BayesStack.Dirichlet,
                       BayesStack.UniqueKey,
                       BayesStack.TupleEnum,
                       Data.Serialize.EnumMap,
                       Data.Serialize.LogFloat,
                       Data.Random.Sequence, Data.Sequence.Chunk
  Build-depends:       base, stm, transformers, mtl, deepseq, random-source, random-fu, rvar, containers, enummapset, ghc-prim, vector, mwc-random, pretty, cereal, logfloat, loch-th, digamma, gamma, statistics
  
