Name:                bayes-stack

Version:             0.2.0.1
Synopsis:            Framework for inferring generative probabilistic models
                     with Gibbs sampling
Description:         bayes-stack is a framework for inference on generative
                     probabilistic models. The framework uses Gibbs sampling,
                     although is suitable for other iterative update methods.
homepage:            https://github.com/bgamari/bayes-stack
License:             BSD3
License-file:        LICENSE
Author:              Ben Gamari
Maintainer:          bgamari.foss@gmail.com
copyright:           Copyright (c) 2012 Ben Gamari
Category:            Math

Build-type:          Simple
Cabal-version:       >=1.6

source-repository head
  type:                 git
  location:             https://github.com/bgamari/bayes-stack.git

Library
  Exposed-modules:     BayesStack.Core, BayesStack.Core.Types, BayesStack.Core.Gibbs,
                       BayesStack.DirMulti, BayesStack.Dirichlet,
                       BayesStack.UniqueKey,
                       BayesStack.TupleEnum,
                       Data.Serialize.EnumMap,
                       Data.Serialize.LogFloat,
                       Data.Random.Sequence, Data.Sequence.Chunk

  Build-depends:       base >=4 && <5,
                       stm,
                       transformers,
                       mtl,
                       deepseq,
                       random-source,
                       random-fu,
                       rvar,
                       containers,
                       enummapset,
                       ghc-prim,
                       vector,
                       mwc-random,
                       pretty,
                       cereal,
                       logfloat,
                       digamma,
                       gamma,
                       statistics
  
